--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -20,7 +20,7 @@
 </main>
 
 <ng-template #TtopQuestions>
-    <app-question *ngFor="let question of questions" [question]="question"></app-question>
+    <app-question class="box-shadow" *ngFor="let question of questions" [question]="question"></app-question>
 </ng-template>
 
 <ng-template #Tloading>
