--- a/frontend/src/app/components/question/question.component.css
+++ b/frontend/src/app/components/question/question.component.css
@@ -1,7 +1,7 @@
 :host {
     display: flex;
     gap: 1rem;
-    border-top: 1px solid var(--border-grey);
+    /* border-top: 1px solid var(--border-grey); */
     padding: 0.5rem;
 }
 
