--- a/frontend/src/app/components/user-profile/user-profile.component.css
+++ b/frontend/src/app/components/user-profile/user-profile.component.css
@@ -1,7 +1,89 @@
 :host {
     display: flex;
-    margin: auto;
     flex: 1;
     flex-direction: column;
     gap: 2rem;
+    padding: 1rem;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;    
+    align-items: center;
+    gap: 0.5rem;
+}
+
+main {
+    padding: 1rem;
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+}
+
+.user-card {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.user-avatar {
+    font-size: 3rem;
+}
+
+.user-info-actions {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.user-actions {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.user-delete-btn {
+    color: salmon;
+    cursor: pointer;
+    text-decoration-color: salmon!important;
+}
+
+.user-edit-btn {
+    color: var(--app-blue);
+    cursor: pointer;
+}
+
+.user-membership {
+    font-size: small;
+}
+
+.user-display-name {
+    color: var(--app-blue);
+    font-size: large;
+    cursor: pointer;
+}
+
+.user-location {
+    display: flex;
+    align-items: center;
+    color: grey;
+}
+
+.lds-ripple {
+    margin: auto
+}
+
+.user-card {
+    padding: 1rem;
+    flex-grow: 1;
+}
+
+.nav-toggles, .user-card {
+    max-width: 80svw;
+}
+
+app-question {
+    flex: 1
 }
