--- a/frontend/src/app/components/ask/ask.component.html
+++ b/frontend/src/app/components/ask/ask.component.html
@@ -1,4 +1,4 @@
-<h1>Ask a Question</h1>
+<h1>{{editMode ? 'Update Your Question' : 'Ask a Question'}}</h1>
 
 <form [formGroup]="askForm" (ngSubmit)="onSubmit()" id="ask-form" *ngIf="!loading || error; else Tloading">
     <div class="inputs">
@@ -30,7 +30,7 @@
         <div id="tags-label">Tags</div>
         <div *ngFor="let tag of tags.value; index as i" class="tag"><div class="tag-name">{{tag}}</div> <ion-icon name="remove-outline" size="large" (click)="removeTag(i)"></ion-icon></div>
     </div>
-    <input type="submit" value="Post Your Question" [class.valid]="askForm.valid" [disabled]="askForm.invalid">
+    <input type="submit" [value]="editMode? 'Update Your Question' : 'Post Your Question'" [class.valid]="askForm.valid" [disabled]="askForm.invalid">
 </form>
 
 <ng-template #Tloading>
