--- a/frontend/src/app/components/all-questions/all-questions.component.css
+++ b/frontend/src/app/components/all-questions/all-questions.component.css
@@ -10,6 +10,8 @@ header {
     flex-direction: column;
     flex: 1;
     display: flex;
+    padding: 1rem;
+    gap: 1rem;
 }
 
 main {
@@ -17,4 +19,9 @@ main {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.filters-head {
+    display: flex;
+    align-items: center;
 }
