--- a/frontend/src/app/components/question-info/question-info.component.html
+++ b/frontend/src/app/components/question-info/question-info.component.html
@@ -22,7 +22,9 @@
                 </div>
                 <div class="more-details">
                     <div class="details">
-                        <ng-container *ngFor="let line of question.details.split('\n')">{{line}}<br></ng-container>
+                        <!-- <span class="details-line" *ngFor="let line of question.details.split('\n')">{{line}}<br></span> -->
+                        <ng-container class="details-line" *ngFor="let line of question.details.split('\n')">{{line}}<br></ng-container>
+                        <!-- {{question.details}} -->
                     </div>
                     <div class="tags">
                         <div class="tag" *ngFor="let tag of question.tags">{{tag}}</div>
@@ -76,7 +78,7 @@
                     </div>
                     <div class="more-details">
                         <div class="details">
-                            <ng-container *ngFor="let line of answer.details.split('\n')">{{line}}<br></ng-container>
+                            <ng-container class="details-line" *ngFor="let line of answer.details.split('\n')">{{line}}<br></ng-container>
                         </div>
                         <div class="ask-info">
                             <div class="asked-date">answered {{answer.answeredDate | date: 'medium'}}</div>
