--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -86,7 +86,7 @@ app-header {
     flex-wrap: wrap;
     position: sticky;
     top: 0;
-    z-index: 999;
+    z-index: 900;
 }
 
 app-footer {
@@ -321,6 +321,7 @@ app-toast-message {
     opacity: 0.9;
     border-radius: 2px;
     justify-content: space-between;
+    z-index: 901;
 }
 
 .error {
@@ -397,4 +398,63 @@ app-toast-message {
 
 .box-shadow {
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+}
+
+.delete-btn {
+    color: salmon;
+    cursor: pointer;
+    text-decoration-color: salmon!important;
+}
+
+.edit-btn {
+    color: var(--app-blue);
+    cursor: pointer;
+}
+
+.pagination {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: space-between;
+}
+
+.pagination * {
+    font-family: RobotoMono, sans-serif;
+}
+
+.page-btns {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.page-btn {
+    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+    line-height: 2rem;
+    text-align: center;
+    border: 1px solid var(--border-grey);
+    cursor: pointer;
+}
+
+.page-btn:hover, .pg-active {
+    background-color: var(--theme-red-color);
+    color: white;
+}
+
+.first-page-btn, .last-page-btn {
+    width: 4rem;
+    border-radius: 0.5rem;
+}
+
+.page-limits {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.pg-filter {
+    font-size: small;
 }
