--- a/frontend/src/app/components/all-questions/all-questions.component.html
+++ b/frontend/src/app/components/all-questions/all-questions.component.html
@@ -48,7 +48,7 @@
 
 <main>
 
-    <ng-container *ngIf="questions.length; else Tloading">
+    <ng-container *ngIf="questions.length || error; else Tloading">
         <ng-container *ngIf="!error; else Terror">
             <ng-container *ngTemplateOutlet="TAllQuestions"></ng-container>
         </ng-container>
