--- a/frontend/src/app/components/all-questions/all-questions.component.html
+++ b/frontend/src/app/components/all-questions/all-questions.component.html
@@ -24,10 +24,10 @@
 
 <section class="pagination">
     <div class="page-btns">
-        <div class="page-btn first-page-btn">1 ···</div>
+        <div class="page-btn first-page-btn pg-active">1 ···</div>
         <div class="page-btn">2</div>
         <div class="page-btn">3</div>
-        <div class="page-btn pg-active">4</div>
+        <div class="page-btn">4</div>
         <div class="page-btn">5</div>
         <div class="page-btn">6</div>
         <div class="page-btn last-page-btn">··· 50</div>
